# sql2mermaid-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml  tox.ini
sql2mermaid/: __init__.py  analyze.py  file.py  main.py  mermaid.py
sql2mermaid_cli/: analyze.py  main.py  mermaid.py
src/: dependencies.py  file.py  main.py  tables.py
tests/: test_sql2mermaid.py
tests/case_with_extract/: expected.txt  query.sql
tests/complex_case/: expected.txt  expected_with_lower.txt  expected_with_upper.txt  query.sql
tests/create_case/: expected.txt  query.sql
tests/normal_case/: expected.txt  expected_with_lower.txt  expected_with_upper.txt  query.sql
tests/simple_case/: expected.txt  expected_with_lower.txt  expected_with_upper.txt  query.sql
