[tool.poetry]
name = "sql2mermaid-cli"
version = "1.0.0"
description = "CLI tool for converting SQL table dependencies to mermaid.js format."
authors = ["sattosan <sato.yuya1211@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sattosan/sql2mermaid-cli"

[tool.poetry.scripts]
sql2mermaid-cli = "sql2mermaid_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8.1"
sqlparse = "^0.4.3"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
isort = "^5.12.0"
tox = "^4.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128
exclude = '''
(
  .eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist|proto
)
'''

[tool.flake8]
ignore = "E203,E266,E501,E722,W503,"
max-line-length = 128
max-complexity = 18
exclude = ".venv,.tox,.mypy_cache,.git,__pycache__"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_site_packages = true
namespace_packages = true
explicit_package_bases = true
exclude = "python/libs/proto"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 128

[tool.pytest.ini_options]
pythonpath = "sql2mermaid_cli"
testpaths = ["tests",]
